attempt at fixing mobile page overflow

--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -177,4 +177,5 @@ body{
     margin-top: 200px;
     margin-left: auto;
     margin-right: auto;
+    overflow-x: hidden;
 }
